# libzork

./: .gitignore  CMakeLists.txt  README.md
include/libzork/: exceptions.hh
include/libzork/runner/: choice.hh  html.hh  interactive.hh  runner.hh  smart.hh
include/libzork/store/: store.hh
include/libzork/story/: node.hh  story.hh
include/libzork/vars/: action.hh  condition.hh
src/: CMakeLists.txt  exceptions.cc  exceptions.hh
src/runner/: CMakeLists.txt  choice.cc  choice_impl.cc  choice_impl.hh  html.cc  html_impl.cc  html_impl.hh  interactive.cc  runner.cc  smart.cc  smart_impl.cc  smart_impl.hh
src/store/: CMakeLists.txt  store.cc  store_impl.cc  store_impl.hh
src/story/: CMakeLists.txt  choice.cc  choice.hh  node.cc  node_impl.cc  node_impl.hh  story.cc  story_impl.cc  story_impl.hh
src/vars/: CMakeLists.txt  action.cc  action_impl.cc  action_impl.hh  condition.cc  condition_impl.cc  condition_impl.hh
tests/html/: castle.html  forest.html  house.html  tower.html
tests/scripts/builtins/: hello.txt
tests/scripts/little_quest/: castle.txt  castle_weapon.txt  forest.txt  house.txt  tower.txt
tests/scripts/short_static/: cave.txt  forest.txt
tests/stories/builtins/: story.yml
tests/stories/dynamic/: story.yml
tests/stories/long_static/: story.yml
tests/stories/short_static/: story.yml
tests/stories/single_word/: story.yml
tests/synonyms/: synonyms.yml
zorkxplorer/src/: main.cc  options.cc  options.hh
